[workspace]
resolver = "2"

members = ["crates/stylex-*"]

[workspace.package]
version = "0.11.1"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/Dwlad90/stylex-swc-plugin.git"


# Set the options for dependencies (not crates in the workspace), this mostly impacts cold builds
[profile.dev.package."*"]
opt-level = 1

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

[profile.bench]
debug = true
lto = true

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
# opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
opt-level = "z"

# Strip debug symbols
strip = "symbols"

[workspace.dependencies]
serde = "1.0.219"
swc_core = { version = "31.1.0" }
swc_config = { version = "3.1.1" }
swc_ecma_parser = { version = "19.0.0" }
swc_compiler_base = { version = "27.0.0" }
lazy_static = "1.5.0"
serde_json = "1.0.142"
serde_plain = "1.0.2"
regex = "1.11.1"
indexmap = "2.10.0"
derive_more = { version = "2.0.1", features = ["display"] }
murmur2 = { version = "0.1.0" }
radix_fmt = { version = "1.0.0" }
phf = { version = "0.12.1" }
once_cell = { version = "1.21.3" }
colored = { version = "3.0.0" }
node-resolve = { version = "2.2.0" }
path-clean = { version = "1.0.1" }
cssparser = { version = "0.35.0" }
testing = "14.0.1"
insta = { version = "1.43.2" }
anyhow = "1.0.98"
log = "0.4.27"
pretty_env_logger = "0.5.0"
color-backtrace = { version = "0.7.0" }
ctor = "0.4.3"
env_logger = "0.11.8"
rustc-hash = "2.1.1"
base62 = { version = "2.2.1" }
md5 = { version = "0.8.0" }
rust_decimal = { version = "1.37.1", features = ["serde"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

# wasm-pack build --target web --dev -d dist --out-name index
