[workspace]
resolver = "2"

members = ["crates/stylex-*"]

[workspace.package]
version = "0.13.0-rc.9"
edition = "2024"
rust-version = "1.90.0"
license = "MIT"
repository = "https://github.com/Dwlad90/stylex-swc-plugin.git"


# Set the options for dependencies (not crates in the workspace), this mostly impacts cold builds
[profile.dev.package."*"]
opt-level = 1

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

[profile.bench]
debug = true
lto = true

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
# opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
opt-level = "z"

# Strip debug symbols
strip = "symbols"

[workspace.dependencies]
serde = "1.0.228"
swc_core = { version = "46.0.3" }
swc_config = { version = "3.1.2" }
swc_ecma_parser = { version = "26.0.1" }
swc_compiler_base = { version = "38.0.0" }
lazy_static = "1.5.0"
serde_json = "1.0.145"
serde_plain = "1.0.2"
fancy-regex = "0.16.2"
indexmap = "2.12.0"
derive_more = { version = "2.0.1", features = ["display"] }
murmur2 = { version = "0.1.0" }
radix_fmt = { version = "1.0.0" }
phf = { version = "0.13.1" }
once_cell = { version = "1.21.3" }
colored = { version = "3.0.0" }
node-resolve = { version = "2.2.0" }
path-clean = { version = "1.0.1" }
cssparser = { version = "0.35.0" }
testing = "17.0.0"
insta = { version = "1.43.2" }
anyhow = "1.0.100"
log = "0.4.28"
pretty_env_logger = "0.5.0"
color-backtrace = { version = "0.7.2" }
ctor = "0.6.0"
env_logger = "0.11.8"
rustc-hash = "2.1.1"
base62 = { version = "2.2.3" }
md5 = { version = "0.8.0" }
rust_decimal = { version = "1.39.0", features = ["serde"] }
glob = { version = "0.3.3" }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

# wasm-pack build --target web --dev -d dist --out-name index
