[workspace]
resolver = "2"

members = ["crates/stylex-*"]

[workspace.package]
version = "0.14.3-rc.2"
edition = "2024"
rust-version = "1.93.1"
license = "MIT"
repository = "https://github.com/Dwlad90/stylex-swc-plugin.git"


# Set the options for dependencies (not crates in the workspace), this mostly impacts cold builds
[profile.dev.package."*"]
opt-level = 1

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

[profile.bench]
debug = true
lto = true

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
# opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
opt-level = "z"

# Strip debug symbols
strip = "symbols"

[workspace.dependencies]
serde = "1.0.228"
swc_core = { version = "56.0.0" }
swc_config = { version = "3.1.2" }
swc_ecma_parser = { version = "33.0.1" }
swc_compiler_base = { version = "47.0.0" }
lazy_static = "1.5.0"
serde_json = "1.0.149"
serde_plain = "1.0.2"
fancy-regex = "0.17.0"
indexmap = "2.13.0"
derive_more = { version = "2.1.1", features = ["display"] }
murmur2 = { version = "0.1.0" }
radix_fmt = { version = "1.0.0" }
phf = { version = "0.13.1" }
once_cell = { version = "1.21.3" }
colored = { version = "3.1.1" }
node-resolve = { version = "2.2.0" }
path-clean = { version = "1.0.1" }
cssparser = { version = "0.36.0" }
testing = "20.0.0"
insta = { version = "1.46.3" }
anyhow = "1.0.102"
log = "0.4.29"
pretty_env_logger = "0.5.0"
color-backtrace = { version = "0.7.2" }
ctor = "0.6.3"
env_logger = "0.11.9"
rustc-hash = "2.1.1"
base62 = { version = "2.2.3" }
md5 = { version = "0.8.0" }
rust_decimal = { version = "1.39.0", features = ["serde"] }
glob = { version = "0.3.3" }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

# wasm-pack build --target web --dev -d dist --out-name index
