[package]
name = "stylex_constants"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Constants, regex patterns and static data for StyleX SWC plugin"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
phf = { workspace = true, features = ["macros"] }
once_cell.workspace = true
fancy-regex.workspace = true
lazy_static.workspace = true
swc_core = { workspace = true, features = ["common"] }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true
