[package]
description = "Constants, regex patterns and static data for StyleX SWC plugin"
edition.workspace = true
license.workspace = true
name = "stylex_constants"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
once_cell.workspace = true
phf = { workspace = true, features = ["macros"] }
rustc-hash.workspace = true

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true

[lints]
workspace = true
