[package]
name = "stylex_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core utils, macros and logger for StyleX SWC plugin"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
ctor.workspace = true
colored.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
env_logger.workspace = true
