[package]
name = "stylex_css_order"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CSS property ordering constants and helpers for StyleX"
publish = false

[dependencies]
stylex_constants = { path = "../stylex-constants" }
stylex_structures = { path = "../stylex-structures" }
stylex_types = { path = "../stylex-types" }
stylex_css_values = { path = "../stylex-css-values" }
