[package]
name = "stylex_css_parser"
version = "0.14.2-rc.1"
edition = "2024"
rust-version = "1.90.0"
description = "CSS value parser"
license = "MIT"
repository = "https://github.com/Dwlad90/stylex-swc-plugin.git"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
swc_core = { workspace = true, features = [
  "common",
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_parser",
  "ecma_codegen",
  "css_codegen",
  "css_visit",
  "css_parser",
  "css_ast",
] }
fancy-regex.workspace = true
anyhow.workspace = true
cssparser = { version = "0.36.0" }
thiserror = "2.0.17"
log.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
proptest = "1.9"
criterion = { version = "0.8", features = ["html_reports"] }
