[package]
description = "CSS value parser"
edition = "2024"
license = "MIT"
name = "stylex_css_parser"
repository = "https://github.com/Dwlad90/stylex-swc-plugin.git"
rust-version = "1.93.1"
version = "0.15.5"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow.workspace = true
cssparser.workspace = true
fancy-regex.workspace = true
indexmap.workspace = true
log.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
swc_core = { workspace = true, features = [
  "common",
  "css_ast",
  "css_codegen",
  "css_parser",
  "css_visit",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
] }
thiserror.workspace = true

stylex_macros = { path = "../stylex-macros" }

[dev-dependencies]
criterion.workspace = true
proptest = "1.11"

[[bench]]
harness = false
name = "css_types_bench"

[[bench]]
harness = false
name = "properties_bench"

[[bench]]
harness = false
name = "token_parser_bench"

[lints]
workspace = true
