[package]
name = "stylex_css_utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CSS utility helpers for the StyleX compiler plugin"
publish = false

[dependencies]
log.workspace = true
stylex_structures = { path = "../stylex-structures" }
