[package]
description = "CSS utility helpers for the StyleX compiler plugin"
edition.workspace = true
license.workspace = true
name = "stylex_css_utils"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
stylex_structures = { path = "../stylex-structures" }
