[package]
name = "stylex_css_values"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CSS value parsing utilities for the StyleX compiler plugin"
publish = false

[dependencies]
cssparser.workspace = true
stylex_macros = { path = "../stylex-macros" }
