[package]
description = "CSS value parsing utilities for the StyleX compiler plugin"
edition.workspace = true
license.workspace = true
name = "stylex_css_values"
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
cssparser.workspace = true
stylex_macros = { path = "../stylex-macros" }
