[package]
description = "CSS generation, normalization and validation for StyleX SWC plugin"
edition.workspace = true
license.workspace = true
name = "stylex_css"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cssparser.workspace = true
fancy-regex.workspace = true
indexmap.workspace = true
log.workspace = true
rustc-hash.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "css_ast",
  "css_codegen",
  "css_parser",
  "css_visit",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
] }

stylex_ast = { path = "../stylex-ast" }
stylex_constants = { path = "../stylex-constants" }
stylex_css_parser = { path = "../stylex-css-parser" }
stylex_enums = { path = "../stylex-enums" }
stylex_evaluator = { path = "../stylex-evaluator" }
stylex_macros = { path = "../stylex-macros" }
stylex_regex = { path = "../stylex-regex" }
stylex_structures = { path = "../stylex-structures" }
stylex_types = { path = "../stylex-types" }
stylex_utils = { path = "../stylex-utils" }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true

[lints]
workspace = true
