[package]
name = "stylex_data_structures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Compound data structures for the StyleX compiler plugin"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
swc_core = { workspace = true, features = ["common", "ecma_ast", "swc_atoms"] }
stylex_enums = { path = "../stylex-enums" }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true
