[package]
description = "Compound data structures for the StyleX compiler plugin"
edition.workspace = true
license.workspace = true
name = "stylex_data_structures"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
stylex_enums = { path = "../stylex-enums" }
swc_core = { workspace = true, features = ["common", "ecma_ast", "swc_atoms"] }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true
