[package]
description = "JS expression evaluation engine for StyleX SWC plugin"
edition.workspace = true
license.workspace = true
name = "stylex_evaluator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow.workspace = true
base62.workspace = true
indexmap.workspace = true
log.workspace = true
md5.workspace = true
murmur2.workspace = true
node-resolve.workspace = true
radix_fmt.workspace = true
rustc-hash.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
] }

stylex_ast = { path = "../stylex-ast" }
stylex_constants = { path = "../stylex-constants" }
stylex_js = { path = "../stylex-js" }
stylex_macros = { path = "../stylex-macros" }
stylex_path_resolver = { path = "../stylex-path-resolver" }
stylex_types = { path = "../stylex-types" }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true
