[package]
description = "JS expression evaluation engine for StyleX SWC plugin"
edition.workspace = true
license.workspace = true
name = "stylex_evaluator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
node-resolve.workspace = true
stylex_macros = { path = "../stylex-macros" }
swc_core = { workspace = true, features = [
  "common",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
] }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true

[lints]
workspace = true
