[package]
description = "JS expression evaluation engine for StyleX SWC plugin"
edition.workspace = true
license.workspace = true
name = "stylex_evaluator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
indexmap.workspace = true
node-resolve.workspace = true
stylex_ast = { path = "../stylex-ast" }
stylex_enums = { path = "../stylex-enums" }
stylex_macros = { path = "../stylex-macros" }
stylex_structures = { path = "../stylex-structures" }
swc_core = { workspace = true, features = [
  "common",
  "ecma_codegen",
  "ecma_parser",
  "ecma_plugin_transform",
  "ecma_utils",
] }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true

[lints]
workspace = true
