[package]
description = "JavaScript runtime helpers for the StyleX compiler plugin"
edition.workspace = true
license.workspace = true
name = "stylex_js"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
swc_core = { workspace = true, features = ["common", "ecma_ast", "swc_atoms"] }

stylex_constants = { path = "../stylex-constants" }
stylex_macros = { path = "../stylex-macros" }

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true

[lints]
workspace = true
