[package]
description = "Macros for StyleX NAPI-RS compiler"
edition.workspace = true
license.workspace = true
name = "stylex_macros"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
colored.workspace = true
ctor.workspace = true
log.workspace = true
pretty_env_logger.workspace = true

stylex_constants = { path = "../stylex-constants" }
