[package]
name = "stylex_path_resolver"
version = "0.4.1"
edition = "2021"
rust-version = "1.82.0"
description = "Path resolver for StyleX SWC plugin"
license = "MIT"
repository = "https://github.com/Dwlad90/stylex-swc-plugin.git"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
wasm=[]

[dependencies]
serde.workspace = true
serde_json.workspace = true
swc_core = { workspace = true, features = ["common", "ecma_loader_node"] }
path-clean = { workspace = true }
regex.workspace = true
anyhow.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
color-backtrace.workspace = true
ctor.workspace = true
env_logger.workspace = true
rustc-hash.workspace = true
once_cell.workspace = true

package-json = "0.4.0"
pathdiff = { version = "0.2.1" }
