[package]
name = "stylex_path_resolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Path resolver for StyleX SWC plugin"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
swc_core = { workspace = true, features = ["common", "ecma_loader_node"] }
path-clean = { workspace = true }
regex.workspace = true
anyhow.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
color-backtrace.workspace = true
ctor.workspace = true
env_logger.workspace = true
rustc-hash.workspace = true
once_cell.workspace = true
indexmap.workspace = true

package-json = "0.5.0"
pathdiff = { version = "0.2.3" }
