[package]
description = "Path resolver for StyleX SWC plugin"
edition.workspace = true
license.workspace = true
name = "stylex_path_resolver"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow.workspace = true
ctor.workspace = true
env_logger.workspace = true
fancy-regex.workspace = true
indexmap.workspace = true
log.workspace = true
once_cell.workspace = true
path-clean = { workspace = true }
pretty_env_logger.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
swc_core = { workspace = true, features = ["common", "ecma_loader_node"] }

stylex_macros = { path = "../stylex-macros" }

oxc_resolver = { version = "11.19.1", features = ["yarn_pnp"] }
package-json = "0.5.0"
pathdiff = { version = "0.2.3" }

[lints]
workspace = true
