[package]
name = "stylex_regex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Compiled regex patterns for StyleX SWC plugin"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
fancy-regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true
