[package]
description = "Compiled regex patterns for StyleX SWC plugin"
edition.workspace = true
license.workspace = true
name = "stylex_regex"
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
fancy-regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true

[lints]
workspace = true
