[package]
name = "stylex_compiler_rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "StyleX rust compiler with SWC"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false


[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_parser",
  "ecma_codegen",
  "css_codegen",
  "css_visit",
  "css_parser",
  "css_ast",
] }
swc_ecma_parser = { workspace = true, features = ["verify"] }
swc_compiler_base = { workspace = true, features = ["node"] }
color-backtrace.workspace = true
rustc-hash.workspace = true
log.workspace = true
glob.workspace = true
fancy-regex.workspace = true

stylex_shared = { path = "../stylex-shared" }
napi = "2"
napi-derive = "3"


[dev-dependencies]
napi-build = "2"


[build-dependencies]
napi-build = "2"
