[package]
name = "stylex_compiler_rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "StyleX rust compiler with SWC"


[lib]
crate-type = ["cdylib", "rlib"]
doctest = false


[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
swc_core = { workspace = true, features = [
  "common",
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_parser",
  "ecma_codegen",
  "css_codegen",
  "css_visit",
  "css_parser",
  "css_ast",
] }
swc_ecma_parser = { workspace = true, features = ["verify"] }
swc_compiler_base = { workspace = true, features = ["node"] }
rustc-hash.workspace = true
log.workspace = true
glob.workspace = true
fancy-regex.workspace = true

stylex_transform = { path = "../stylex-transform" }
stylex_types = { path = "../stylex-types" }
stylex_ast = { path = "../stylex-ast" }
stylex_enums = { path = "../stylex-enums" }
stylex_regex = { path = "../stylex-regex" }
stylex_structures = { path = "../stylex-structures" }
stylex_utils = { path = "../stylex-utils" }
stylex_macros = { path = "../stylex-macros" }
stylex_logs = { path = "../stylex-logs" }
indexmap.workspace = true
napi = { version = "3", features = ["compat-mode"] }
napi-derive = "3"


[dev-dependencies]
napi-build = "2"


[build-dependencies]
napi-build = "2"
